first try to fix image bug on mobile version

--- a/utilities/styles.scss
+++ b/utilities/styles.scss
@@ -47,6 +47,9 @@ justify-content: flex-start;
 margin-bottom: 7%;
 background-color: white;
 box-shadow:  0 4px 2px -4px #888888;
+border-left: 1px solid #d3d3d3;
+border-right: 1px solid #d3d3d3;
+border-bottom: 1px solid #d3d3d3;
 }
 
 
@@ -214,7 +217,6 @@ transition: 0.15;
    transition: 0.15; 
  }
 
-
  @media only screen and (min-width: 501px) {
 .menu-header {
    font-size: 20px;
@@ -300,5 +302,11 @@ img {
 }
 .parallax {
    background-attachment: scroll;
+}
+
+.parallax img {
+   height: 100%;
+   width: 100%;
+   object-fit: contain;
 }
 }
